Refactor Clothes class with Material enum and copy constructor
Updated the Clothes class to use an enumeration for material, added a copy constructor, and improved validation methods.